fixed z-index

--- a/weather/locations/css/component.css
+++ b/weather/locations/css/component.css
@@ -184,10 +184,6 @@
 
   .moon {
     position: absolute;
-    z-index: 1;
+    z-index: -1;
     transform: translateY(-.2em);
-  }
-
-  .outer p {
-    z-index: 2;
   }
